--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,46 @@ nav ul li a:link, nav ul li a:visited{
   padding-left: 10px;
 }
 
+
+#allcontent{
+  margin: 10px 10px 0px 10px;
+  padding-top: 20px;
+  padding-bottom: 5px;
+  height: 800px;
+}
+aside{
+  width:190px;
+  float:left;
+}
+#profileBox{
+  height: 250px;
+}
+#profileImage{
+  display: block;
+  margin-left : auto;
+  margin-right: auto;
+}
+.title{
+  font-weight: bold;
+}
+#sidebar ul{
+  padding-left: 0px;
+}
+#sidebar ul li{
+  margin:0px;
+  list-style-type: none;
+  border-bottom:1px solid #efefef;
+  padding:0px;
+  max-width: inherit;
+  width:100%;
+}
+article{
+  width:590px;
+  float: left;
+}
+
 footer{
+  clear: left;
   text-align: center;
   padding:15px;
   margin:0px 10px 10px 10px;
