--- a/css/board.css
+++ b/css/board.css
@@ -1,3 +1,7 @@
+.boardArticle {
+    width:560px;
+}
+
 /* 글목록 */
 
 #boardList table {
@@ -58,7 +62,7 @@
 #boardList .searchBox{
   text-align: center;
 }
- 
+
 /* 글쓰기 */
 
 #boardWrite {
@@ -93,6 +97,58 @@
 #boardView #boardContent {
   margin: 10px 0;
 }
+
+/* 댓글 쓰기*/
+#boardComment table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+#boardComment table th {
+  width: 100px;
+  padding: 0 5px;
+  text-align: right;
+  vertical-align: middle;
+}
+#boardComment table td {
+  padding: 5px;
+  text-align: left;
+}
+
+#boardComment #coContent {
+  width: 99%;
+  height: 120px;
+}
+#commentView ul {
+  list-style: none;
+  margin: 0;
+  padding:0;
+}
+#commentView .oneDepth {
+  margin: 10px 0;
+  padding: 10px;
+  background: #eeeeee;
+}
+
+#commentView .twoDepth {
+  margin: 20px;
+ padding: 10px;
+ background: #ffffff;
+}
+#commentView .commentInfo {
+  overflow: hidden;
+}
+#commentView .commentId {
+  float: left;
+}
+#commentView .commentBtn {
+  float: right;
+}
+#commentView .commentContent {
+  clear: both;
+} 
+
 
 /* 글삭제 */
 #boardDelete table {
