--- a/css/signup.css
+++ b/css/signup.css
@@ -13,8 +13,8 @@ dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
+figure, figcaption, hgroup,
+menu, output, ruby, section, summary,
 time, mark, audio, video {
     margin: 0;
     border: 0;
@@ -24,7 +24,7 @@ time, mark, audio, video {
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+hgroup, menu, section {
     display: block;
 }
 ol, ul {
