--- a/css/signup.css
+++ b/css/signup.css
@@ -23,7 +23,7 @@ time, mark, audio, video {
     vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
+article, details, figcaption, figure,
 hgroup, menu, section {
     display: block;
 }
