--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 
-body {
+html, body {
   width : 800px;
   height:100%;
 
 }
-body,footer{
+html, body,footer{
   margin-left : auto;
   margin-right: auto;
 }
@@ -47,7 +47,9 @@ nav ul li a:link, nav ul li a:visited{
   margin: 10px 10px 0px 10px;
   padding-top: 20px;
   padding-bottom: 5px;
-  height: 800px;
+  min-height:100%;
+  padding-bottom:60px;
+
 }
 aside{
   width:190px;
@@ -84,7 +86,6 @@ article{
 footer{
   clear: left;
   text-align: center;
-  padding : 80px;
   margin:0px 10px 10px 10px;
   font-size: 90%;
 }
