--- a/css/signup.css
+++ b/css/signup.css
@@ -16,7 +16,7 @@ article, aside, canvas, details, embed,
 figure, figcaption, hgroup,
 menu, output, ruby, section, summary,
 time, mark, audio, video {
-    margin: 0;
+    /*margin: 0;*/
     border: 0;
     font-size: 100%;
     font: inherit;
