--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@ html, body {
   height:100%;
 
 }
+a:link{
+  color : black;
+  text-decoration: none;
+}
 html, body,footer{
   margin-left : auto;
   margin-right: auto;
