--- a/css/board.css
+++ b/css/board.css
@@ -122,6 +122,10 @@
   width: 99%;
   height: 120px;
 }
+#commentView{
+  margin-top:50px;
+}
+
 #commentView ul {
   list-style: none;
   margin: 0;
