--- a/css/signup.css
+++ b/css/signup.css
@@ -11,7 +11,7 @@ small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
+caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed,
 figure, figcaption, hgroup,
 menu, output, ruby, section, summary,
@@ -38,24 +38,10 @@ q:before, q:after {
     content: '';
     content: none;
 }
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
 /*초기화 끝 css 시작*/
 .body{
  width: 1000px;
  margin: 0 auto;
-}
-
-table .label{
- font-size: 1em;
- color : #aabbcc;
-}
-table .notice{
- color: blue;
- font-size: 0.7em;
- display : none;
 }
 
 .wrapper_table{
