--- a/css/board.css
+++ b/css/board.css
@@ -1,4 +1,5 @@
 .boardArticle {
+  margin-top:20px;
     width:560px;
 }
 
@@ -35,6 +36,10 @@
   text-align:center;
 }
 #boardList .hit {
+  width:40px;
+  text-align:center
+}
+#boardList .del , .up{
   width:40px;
   text-align:center
 }
